[workspace]
resolver = "3"
members = [
    "momitroll-startup",
    "momitroll-core",
    "momitroll-config",
    "momitroll-util",
    "momitroll-logger",

]

default-members = [
    "momitroll-startup",
    "momitroll-core",
    "momitroll-config",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Bohdan Sokolovskyi <sokol.chemist@gmail.com"]
license = "MIT"
repository = "https://github.com/gaussfff/momitroll"
homepage = "https://github.com/gaussfff/momitroll"
description = "mongo migration tool"
keywords = [
    "rust",
    "mongo",
    "mongodb",
    "migration",
    "tool"
]
categories = [
    "tool",
    "migration-tool",
    "mongo-tool",
    "mongodb-tool"
]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
mongodb = "3.2.4"
serde_json = "1.0.141"
futures = "0.3.31"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
bson = { version = "2.15.0", features = ["chrono-0_4"] }
tokio = { version = "1.46.1", features  = ["full"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.test]
opt-level = 0
debug = 2
