[package]
name = "momitroll-core"
description = "core of application"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
chrono = "0.4.41"
anyhow = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
momitroll-config = { path = "../momitroll-config" }
momitroll-util = { path = "../momitroll-util" }
